infra/frontend/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: XXXX_AWS_ACCOUNT_ID_XXXX.dkr.ecr.ap-northeast-1.amazonaws.com/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
